# os-python-service-identity

./: PKG-INFO  python-service-identity_1.0.0.orig.tar.gz.delta  python-service-identity_1.0.0.orig.tar.gz.id  python-service-identity_16.0.0.orig.tar.gz.delta  python-service-identity_16.0.0.orig.tar.gz.id  python-service-identity_18.1.0.orig.tar.gz.delta  python-service-identity_18.1.0.orig.tar.gz.id  setup.cfg
debian/: .git-dpm  changelog  control  copyright  rules  watch
debian/patches/: Add-missing-six-dependency  series
debian/tests/: control
debian/upstream/: signing-key.asc
service_identity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
