[tool:pytest]
minversion = 3.0
strict = true
addopts = -ra
testpaths = tests
filterwarnings = 
	once::Warning

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[isort]
atomic = true
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
not_skip = __init__.py
use_parentheses = true
known_first_party = service_identity
known_third_party = OpenSSL,attr,cryptography,pyasn1,pyasn1_modules,pytest,setuptools,six

[egg_info]
tag_build = 
tag_date = 0

